--- a/index.html
+++ b/index.html
@@ -33,24 +33,28 @@ I am excited about <a href="https://en.wikipedia.org/wiki/Intelligence_amplifica
 The dominant majority of my research is aligned with <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i>  (ICLR, NeurIPS, ICML) and <i>artificial intelligence</i> (AAAI, IJCAI).</p>
 <p>Here are several themes I am interested in: </p>
 <ul>
-<li><p><b>Generalism:</b>
+<li><p><b>General-purpose models:</b>
 AlphaGo may be the world champion at Go, although it can't solve any other problem! 
-How can we incentivize building models that can address a broader scope of tasks and abilities?  (papers: <a href="https://arxiv.org/abs/2204.07705">EMNLP&rsquo;22</a>, <a href="https://arxiv.org/abs/2104.08773">ACL&rsquo;22</a>, <a href="https://arxiv.org/abs/2005.00700">EMNLP-Findings&rsquo;20</a>)</p>
+How can we incentivize building models that can address a broader scope of tasks and abilities?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Self-supervised learning:</b> 
-How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? (papers: <a href="https://arxiv.org/abs/2005.04304">ACL&rsquo;20</a>, <a href="https://arxiv.org/abs/1907.03228">EMNLP&rsquo;18</a>)</p>
+<li><p><b>Self-supervised representation learning and knowledge acquisition:</b>
+How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Reasoning:</b>  I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; for explaining or justifying decisions.
-How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? (papers: <a href="https://arxiv.org/abs/2009.00751">TACL&rsquo;21</a>, <a href="https://arxiv.org/abs/2101.02235">NAACL&rsquo;21</a>)</p>
+<li><p><b>Reasoning and problem solving:</b>  I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; for explaining or justifying decisions.
+How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>AI + Humans:</b> With the increased deployment of AI we need to better understand their impacts on humans and foresee the unintended harms that may result:
-How can we bake in transparency in models so human operators can contextualize system output? Can we make such transparency into a truly democratic oversight of systems and their algorithmic biases?  Can we build systems that can recourse when there is harm to those that are marginalized? Can we build systems that reduce our socio-political divisions? (papers:  <a href="https://arxiv.org/abs/2010.02428">EMNLP&rsquo;20</a>, <a href="https://arxiv.org/abs/1906.03538">NAACL&rsquo;19</a>)</p>
+<li><p><b>Interaction and communication:</b> Can we engineer AI systems not only to effectively engage, interact, and communicate with humans but also with other AI systems? This can be, for example, for the purpose of enabling coordination or harmony at the population-level.</p>
+</li>
+</ul>
+<ul>
+<li><p><b>AI in Society:</b> With the increased deployment of AI we need to better understand their impacts on humans and foresee the unintended harms that may result:
+How can we bake in transparency in models so human operators can contextualize system output? Can we make such transparency into a truly democratic oversight of systems and their algorithmic biases?  Can we build systems that can recourse when there is harm to those that are marginalized? Can we build systems that reduce our socio-political divisions?</p>
 </li>
 </ul>
 <div class="infoblock">
@@ -310,7 +314,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-27 10:52:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-08 19:26:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
