--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ How can we bake in transparency in models so human operators can contextualize s
 </div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
-<li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+<li><p>University of Maryland, <a href="files/2023_ece_talk/2023-ece-jhu.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
 </li>
 <li><p>Johns Hopkins University, <a href="files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
 </li>
@@ -90,6 +90,14 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">arXiv preprint arXiv:2310.00840</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">arXiv preprint arXiv:2309.16155</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2307.08775</font>, 2023. <font size=-1></font></p>
 </li>
@@ -312,7 +320,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-12 16:40:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-03 11:56:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
