--- a/index.html
+++ b/index.html
@@ -91,11 +91,19 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">arXiv preprint arXiv:2310.00840</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pre-trained Transformers Really Learn In-context by Gradient Descent?</b></a>  <br />    Lingfeng Shen, Aayush Mishra and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2310.08540</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">arXiv preprint arXiv:2309.16155</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Tianxing He and Yichen Wang and Yung-Sung Chuang and Hongwei Wang and Lingfeng Shen and Benjamin Van Durme and Daniel Khashabi and Yulia Tsvetkov <br />    <font color="DarkRed">arXiv preprint arXiv:2310.03991 - arXiv</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">arXiv preprint arXiv:2310.00840</font>, 2023. <font size=-1><a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">arXiv preprint arXiv:2309.16155</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -107,11 +115,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.10713"><b>Flatness-Aware Prompt Selection Improves Accuracy and Sample Efficiency.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Boyuan Zheng and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2305.10713</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/flatness">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2205.11603"><b>Representation Projection Invariance Mitigates Representation Collapse.</b></a>  <br />    Anastasia Razdaibiedina and Ashish Khetan and Zohar Karnin and Daniel Khashabi and Vishaal Kapoor and Vivek Madan <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2205.11603"><b>Representation Projection Invariance Mitigates Representation Collapse.</b></a>  <br />    Anastasia Razdaibiedina and Ashish Khetan and Zohar Karnin and Daniel Khashabi and Vishaal Kapoor and Vivek Madan <br />    <font color="DarkRed">arXiv preprint arXiv:2205.11603</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2305.10713"><b>Flatness-Aware Prompt Selection Improves Accuracy and Sample Efficiency.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Boyuan Zheng and Daniel Khashabi <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/flatness">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -320,7 +328,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-03 11:56:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-12 22:31:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
