--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@ How can we bake in transparency in models so human operators can contextualize s
 </div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
-<li><p>University of Maryland, <a href="files/2023_ece_talk/2023-ece-jhu.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+<li><p>New York University, <a href="files/2023_nyu/2023-nyu2-slides.pdf">Large Language Models: Revisiting Few Mysteries</a>, 2023.</p>
 </li>
-<li><p>Johns Hopkins University, <a href="files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
+<li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+</li>
+<li><p>Johns Hopkins University CLSP, <a href="files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
 </li>
 <li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
 </p>
@@ -328,7 +330,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-12 22:31:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-01 11:30:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
