--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://youtu.be/hJbxW0xct2E">[talk]</a> <a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <b>Best video award.</b> <font size=-1><a href="https://danielkhashabi.com/files/2023_adaptive_retrieval/adaptive_retrieval_oral_final.key">[slides]</a> <a href="https://youtu.be/hJbxW0xct2E">[talk]</a> <a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -330,7 +330,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-01 11:30:29 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-13 15:40:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
