--- a/index.html
+++ b/index.html
@@ -97,7 +97,15 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <b>Spotlight presentation.</b> <font size=-1><a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -106,14 +114,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Tianxing He and Yichen Wang and Yung-Sung Chuang and Hongwei Wang and Lingfeng Shen and Benjamin Van Durme and Daniel Khashabi and Yulia Tsvetkov <br />    <font color="DarkRed">arXiv preprint arXiv:2310.03991 - arXiv</font>, 2023. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2307.08775</font>, 2023. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">arXiv preprint arXiv:2305.13252</font>, 2023. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -330,7 +330,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-16 10:34:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-18 11:57:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
