--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Sihao Chen and Yunmo Chen and Jingyu Zhang and Haoran Xu and Boyuan Zheng and Philipp Koehn and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2401.13136</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
 </li>
 </ul>
@@ -330,7 +334,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-18 11:57:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-25 20:47:23 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
