--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye and Andrew Wang and Jacob Choi and Yining Lu and Shreya Sharma and Lingfeng Shen and Vijay Tiyyala and Nicholas Andrews and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2402.12370</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/Analogical-Reasoning">[data]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2402.11399"><b>k-SemStamp: A Clustering-Based Semantic Watermark for Detection of Machine-Generated Text.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Yichen Wang and Daniel Khashabi and Tianxing He <br />    <font color="DarkRed">arXiv preprint arXiv:2402.11399</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Sihao Chen and Yunmo Chen and Jingyu Zhang and Haoran Xu and Boyuan Zheng and Philipp Koehn and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2401.13136</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -105,7 +113,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/yining610/GEAR">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -334,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-25 20:47:23 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-20 00:09:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
