--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ How can we enable machines to communicate via <i>reasons</i>, for a broad-rangin
 </li>
 </ul>
 <ul>
-<li><p><b>Interaction and communication:</b>  Can we engineer AI systems not only to effectively engage, interact, and communicate with humans but also with other AI systems? This can be, for example, for the purpose of enabling coordination or harmony at the population-level.</p>
+<li><p><b>Interaction, communication and coordination:</b>  Can we engineer AI systems not only to effectively engage, interact, and communicate with humans but also with other AI systems? This can be, for example, for the purpose of enabling coordination or harmony at the population-level.</p>
 </li>
 </ul>
 <ul>
@@ -342,7 +342,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-20 00:09:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-20 16:40:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
