--- a/index.html
+++ b/index.html
@@ -34,27 +34,31 @@ The dominant majority of my research is aligned with <i>natural language process
 <p>Here are several themes I am interested in: </p>
 <ul>
 <li><p><b>General-purpose models:</b>
-AlphaGo may be the world champion at Go, although it can't solve any other problem! 
-How can we incentivize building models that can address a broader scope of tasks and abilities?</p>
+AlphaGo may be the world champion at Go, although it can't solve any other problem! How can we build models that generalize a broader scope of tasks, abilities, modalities, or environments?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Self-supervised representation learning and knowledge acquisition:</b>
-How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization?</p>
+<li><p><b>Self-supervised representation learning:</b>
+The AI literature has found powerful ways to build rich representations of the world by utilizing cheap signals available in the wild (web data, physical environment, etc.).
+How can we make these algorithms more effective and efficient (in terms of data or computation cost)?
+How can we make them robust to distributional drifts in data, e.g., low-data regimes or adversarial settings?
+How can we scale them up to various modalities or forms of communication/interaction?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Reasoning and problem solving:</b>  I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; for explaining or justifying decisions.
-How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks?</p>
+<li><p><b>Reasoning and problem-solving:</b>  I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; to explain or justify decisions.
+How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks?
+How can we make this process &ldquo;verifiable&rdquo; or &ldquo;explainable&rdquo; to humans?
+Can we build systems that can recourse upon a mistake?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Interaction, communication and coordination:</b>  Can we engineer AI systems not only to effectively engage, interact, and communicate with humans but also with other AI systems? This can be, for example, for the purpose of enabling coordination or harmony at the population-level.</p>
+<li><p><b>Interaction, communication, and coordination:</b>  Can we engineer AI systems to effectively engage, interact, and communicate with humans and other AI systems for the purpose of, for example, coordination?</p>
 </li>
 </ul>
 <ul>
-<li><p><b>AI in Society:</b> With the increased deployment of AI we need to better understand their impacts on humans and foresee the unintended harms that may result:
-How can we bake in transparency in models so human operators can contextualize system output? Can we make such transparency into a truly democratic oversight of systems and their algorithmic biases?  Can we build systems that can recourse when there is harm to those that are marginalized? Can we build systems that reduce our socio-political divisions?</p>
+<li><p><b>AI ↔ humans:</b> <i>The ultimate goal of our work is to benefit humans!</i> How should we engineer the interface between AI and machines?
+What forms of interaction are most effective and meaningful for humans? How can we make AI systems more transparent and accountable to humans? Can we make such transparency into a truly democratic oversight of systems, their algorithmic biases and mistakes? How should we think about personalizing AI systems to their users?</p>
 </li>
 </ul>
 <div class="infoblock">
@@ -342,7 +346,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-20 16:40:03 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-20 20:44:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
