--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Can we build systems that can recourse upon a mistake?</p>
 </ul>
 <ul>
 <li><p><b>AI ↔ humans:</b> <i>The ultimate goal of our work is to benefit humans!</i> How should we engineer the interface between AI and machines?
-What forms of interaction are most effective and meaningful for humans? How can we make AI systems more transparent and accountable to humans? Can we make such transparency into a truly democratic oversight of systems, their algorithmic biases and mistakes? How should we think about personalizing AI systems to their users?</p>
+What forms of interaction are most effective and meaningful for humans? How can we make AI systems more transparent and accountable to humans? Can we turn such transparency into a truly democratic oversight of systems, their algorithmic biases and mistakes? How should we think about personalizing AI systems to their users?</p>
 </li>
 </ul>
 <div class="infoblock">
@@ -346,7 +346,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-20 20:44:05 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-21 17:00:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
