--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
 Assistant Professor of <a href="https://www.cs.jhu.edu/">Computer Science</a> <br />
 <a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a> <br />
+<a href="https://ai.jhu.edu/">Data Science and AI Institute</a> <br />
 <a href="https://engineering.jhu.edu/">Whiting School of Engineering</a> <br />
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br /><br />
 Office: Hackerman Hall 316B | Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
@@ -346,7 +347,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 17:00:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-29 16:43:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
