--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2402.18678"><b>RORA: Robust Free-Text Rationale Evaluation.</b></a>  <br />    Zhengping Jiang and Yining Lu and Hanjie Chen and Daniel Khashabi and Benjamin Van Durme and Anqi Liu <br />    <font color="DarkRed">arXiv preprint arXiv:2402.18678</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye and Andrew Wang and Jacob Choi and Yining Lu and Shreya Sharma and Lingfeng Shen and Vijay Tiyyala and Nicholas Andrews and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2402.12370</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/Analogical-Reasoning">[data]</a></font></p>
 </li>
 </ul>
@@ -347,7 +351,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-29 16:43:48 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-02 15:38:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
