--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye and Andrew Wang and Jacob Choi and Yining Lu and Shreya Sharma and Lingfeng Shen and Vijay Tiyyala and Nicholas Andrews and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2402.12370</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/Analogical-Reasoning">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.12370"><b>AnaloBench: Benchmarking the Identification of Abstract and Long-context Analogies.</b></a>  <br />    Xiao Ye and Andrew Wang and Jacob Choi and Yining Lu and Shreya Sharma and Lingfeng Shen and Vijay Tiyyala and Nicholas Andrews and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2402.12370</font>, 2024. <font size=-1><a href="https://huggingface.co/datasets/jhu-clsp/AnaloBench">[data]</a> <a href="https://github.com/JHU-CLSP/AnaloBench">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -351,7 +351,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-02 15:38:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-09 16:37:24 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
