--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Tianxing He and Yichen Wang and Yung-Sung Chuang and Hongwei Wang and Lingfeng Shen and Benjamin Van Durme and Daniel Khashabi and Yulia Tsvetkov <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
 </li>
 </ul>
@@ -131,10 +135,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pre-trained Transformers Really Learn In-context by Gradient Descent?</b></a>  <br />    Lingfeng Shen, Aayush Mishra and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2310.08540</font>, 2023. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Tianxing He and Yichen Wang and Yung-Sung Chuang and Hongwei Wang and Lingfeng Shen and Benjamin Van Durme and Daniel Khashabi and Yulia Tsvetkov <br />    <font color="DarkRed">arXiv preprint arXiv:2310.03991 - arXiv</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -351,7 +351,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 16:37:24 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-13 13:12:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
