--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng and Marc Marone and Orion Weller and Dawn Lawrie and Daniel Khashabi and Benjamin Van Durme <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, Yeganeh Kordi, Kate Sanders, Yizhong Wang, Adam Byerly, Jack Zhang, Benjamin Van Durme and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2403.11905</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/turking-test">[data]</a> <a href="https://github.com/JHU-CLSP/turking-test">[code]</a> <a href="https://turkingtest.github.io/">[demo]</a></font></p>
 </li>
 </ul>
@@ -355,7 +359,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-18 23:07:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-20 08:30:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
