--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, Yeganeh Kordi, Kate Sanders, Yizhong Wang, Adam Byerly, Jack Zhang, Benjamin Van Durme and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2403.11905</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/turking-test">[data]</a> <a href="https://github.com/JHU-CLSP/turking-test">[code]</a> <a href="https://turkingtest.github.io/">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, Yeganeh Kordi, Kate Sanders, Yizhong Wang, Adam Byerly, Jack Zhang, Benjamin Van Durme and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2403.11905</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="https://turkingbench.github.io/">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -359,7 +359,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-20 08:30:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-22 08:26:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
