--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.04298"><b>SELF-<a href="IN<\\/a>CORRECT:">LLMs Struggle with Refining Self-Generated Responses.</b></a>  <br />    Dongwei Jiang and Jingyu Zhang and Orion Weller and Nathaniel Weir and Benjamin Van Durme and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Refining Self-Generated Responses.</b></a>  <br />    Dongwei Jiang and Jingyu Zhang and Orion Weller and Nathaniel Weir and Benjamin Van Durme and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -367,7 +367,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-09 10:10:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-09 15:14:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
