--- a/index.html
+++ b/index.html
@@ -87,11 +87,9 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
 <ul>
-<li><p>Spring 2024: <a href="https://self-supervised.cs.jhu.edu/sp2024/">CSCI 601.471/671, NLP: Self-supervised Models</a></p>
+<li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a></p>
 </li>
-<li><p>Spring 2023: <a href="https://self-supervised.cs.jhu.edu/sp2023/">CSCI 601.471/671, NLP: Self-supervised Models</a></p>
-</li>
-<li><p>Fall 2022: <a href="https://self-supervised.cs.jhu.edu/fa2022/">CSCI 601.771, Advances in Self-supervised Models</a></p>
+<li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, Fall 2024</p>
 </li>
 </ul>
 <p><h2 id="publication">Publication</h2></p>
@@ -367,7 +365,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-09 15:14:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-15 11:31:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
