--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <b>Spotlight presentation.</b> <font size=-1><a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.00840"><b>Error Norm Truncation: Robust Training in the Presence of Data Noise for Text Generation Models.</b></a>  <br />    Tianjian Li and Haoran Xu and Philipp Koehn and Daniel Khashabi and Kenton Murray <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <b>Spotlight presentation.</b> <font size=-1><a href="https://youtu.be/tfSkAL3-sWE">[talk]</a> <a href="https://github.com/tianjianl/error_norm_truncation">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +365,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-15 13:49:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-24 15:45:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
