--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Revisiting the Hypothesis: Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    Lingfeng Shen, Aayush Mishra and Daniel Khashabi. <br />    <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2309.16155v1"><b>The Trickle-down Impact of Reward (In-) consistency on RLHF.</b></a>  <br />    Lingfeng Shen, Sihao Chen, Linfeng Song, Lifeng Jin, Baolin Peng, Haitao Mi, Daniel Khashabi and Dong Yu. <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2024. <font size=-1><a href="https://github.com/shadowkiller33/contrast-instruction">[code]</a></font></p>
 </li>
 </ul>
@@ -145,10 +149,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Do Pre-trained Transformers Really Learn In-context by Gradient Descent?</b></a>  <br />    Lingfeng Shen, Aayush Mishra and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2310.08540</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +365,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-24 15:45:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-02 10:28:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
