--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    Jingyu Zhang and Marc Marone and Tianjian Li and Benjamin Van Durme and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2404.03862</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    Jingyu Zhang and Marc Marone and Tianjian Li and Benjamin Van Durme and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2404.03862</font>, 2024. <font size=-1><a href="https://www.cs.jhu.edu/~danielk/files/2024_quote_tuning/QuoteTuning-MASC.pdf">[slides]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +365,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-02 10:28:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-05 20:33:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
