--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Sihao Chen and Yunmo Chen and Jingyu Zhang and Haoran Xu and Boyuan Zheng and Philipp Koehn and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Sihao Chen and Yunmo Chen and Jingyu Zhang and Haoran Xu and Boyuan Zheng and Philipp Koehn and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2402.11399"><b>k-SemStamp: A Clustering-Based Semantic Watermark for Detection of Machine-Generated Text.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Yichen Wang and Daniel Khashabi and Tianxing He <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2402.11399"><b>k-SemStamp: A Clustering-Based Semantic Watermark for Detection of Machine-Generated Text.</b></a>  <br />    Abe Bohan Hou and Jingyu Zhang and Yichen Wang and Daniel Khashabi and Tianxing He <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +365,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-16 07:41:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-16 08:10:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
