--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    Weiting Tan and Jingyu Zhang and Lingfeng Shen and Daniel Khashabi and Philipp Koehn <br />    <font color="DarkRed">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Refining Self-Generated Responses.</b></a>  <br />    Dongwei Jiang and Jingyu Zhang and Orion Weller and Nathaniel Weir and Benjamin Van Durme and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2404.04298</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -104,7 +108,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng and Marc Marone and Orion Weller and Dawn Lawrie and Daniel Khashabi and Benjamin Van Durme <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng and Marc Marone and Orion Weller and Dawn Lawrie and Daniel Khashabi and Benjamin Van Durme <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC">- Timestamp.pdf [poster]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -148,7 +152,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -365,7 +369,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-16 08:10:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-05 16:21:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
